@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - generated test file now defaults to xt/author/no-tabs.t, but is
+      configurable
 
 0.08      2014-05-04 21:24:28Z
     - deprecate the needless separated finder options, replaced by a single
